fixed mobile visibility sensor error + made some design changes to the image block component

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -14,6 +14,14 @@
   a:focus {
     @apply outline-black;
   }
+  :global {
+    [data-rmiz-wrap='visible'],
+    [data-rmiz-wrap='hidden'] {
+      width: 100%;
+      height: 100%;
+      display: block;
+    }
+  }
 }
 
 @layer components {
